# bin2text

./: CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: wheel.yml
cmake/: Optimize.cmake
docs/: index.rst
include/: base128.h  base16.h  base32.h  base64.h
src/: base64.cpp
src/bin2text/: __init__.py  __main__.py  base128.pyx  base16.pyx  base32.pyx  base64.pyx  bin2text.pyx
tests/: test_bin2text_basic.py
tests/cpp/: test_base128.cpp  test_base16.cpp  test_base32.cpp  test_base64.cpp
tests/python/: test_base128.py  test_base16.py  test_base32.py  test_base64.py
